--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Pasante de Tecnologías de la Información</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="CV.docx" class="btn btn-outline-light mr-5">Descarga mi CV</a>
+                        <a href="CV.pdf" class="btn btn-outline-light mr-5">Descarga mi CV</a>
                        
                     </div>
                 </div>
